refactor: улучшение вывода истории. Применён LinkedList.